TestSuite/Syntax/Errors/Credit2.tjp
project test "Test" "1.0" 2003-01-01 2003-01-02

task t1 "Task1" {
	start 2003-01-01
	milestone
	endcredit 1.0
}

